--- a/Dominos.Web.UI/Views/Shared/_Layout.cshtml
+++ b/Dominos.Web.UI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Dominos.Web.UI.Business;
+@inject SessionHelper Session
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,7 +29,16 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <partial name="BasketIconPartial" class="float-right"/>
+                @{ if (Session.Customer == null)
+                    {
+                        <a class="border float-right align-middle" style="text-decoration:none;color:white; border-radius:25px; height:30px; width:100px;" asp-controller="Login" asp-action="Login"><p class="text-center">Giriş Yap</p></a>
+                    }
+                    else
+                    {
+                        <a class="border float-right align-middle" style="text-decoration:none;color:white; border-radius:25px; height:30px; width:100px;" asp-controller="Login" asp-action="Logout"><p class="text-center">Çıkış Yap</p></a>
+                    }
+                }
+                <partial name="BasketIconPartial" class="float-right" />
             </div>
         </nav>
     </header>
