--- a/Dominos.Web.UI/Views/Home/Index.cshtml
+++ b/Dominos.Web.UI/Views/Home/Index.cshtml
@@ -8,41 +8,32 @@
 @model HomeViewModel
 
 <form asp-controller="Home" asp-action="Index" method="post">
-    <div class="col-md-12 bg-red text-center home-header-image-height">
-        <img class="margin-top-54" src="~/images/Asset1.png" />
+    <input asp-for="AddedProductId" type="hidden" id="AddedProductId" />
+    <div class="col-md-12 bg-red text-center" style="height:382px;">
+        <img src="~/images/Asset1.png" style="margin-top:54px;" />
     </div>
-    <div class="col-md-8 offset-2 border border-dominos">
-        <div class="row">
-            <h4>Pizzalar</h4>
+    <div class="col-lg-8 offset-2 border" style="height:900px;">
+        <div class="row" style="margin-top:15px; margin-left:15px;">
+            <h3>Pizzalar</h3>
         </div>
         <div class="row">
-            @foreach (var product in Model?.ProductList)
-            {
-                <div class="col-md-4 home-product-margin-bottom" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;height:380px;">
-                    <div class="border border-dominos rounded product-radius" style="height:380px;">
-                        <div class="col-md-12 m-0 p-0">
-                            <img class="border-top embed-responsive pizza-image-size" src="@product.ImagePath" style="border-top-left-radius:25px;border-top-right-radius:25px;" />
-                        </div>
-                        <div class="col-md-12 border border-0 product-radius" style="padding:10px 25px 0px 25px;background-color:white;">
+            @{
+                foreach (var product in Model?.ProductList)
+                {
+                    <div class="col-md-4 home-product">
+                        <div class="border border-dominos-home rounded">
                             <div class="col-md-12 m-0 p-0">
-                                <h5>@product.ProductName</h5>
+                                <img class="border-top embed-responsive pizza-image" src="@product.ImagePath" />
                             </div>
-                            <div class="col-md-12 m-0 p-0">
-                                @product.Description
-                            </div>
-                            <div class="align-bottom">
-                                <div class="row">
-                                    <div class="col-md-6 text-left align-middle">
-                                        @product.Price TL
-                                    </div>
-                                    <div class="col-md-6 text-right">
-                                        <button class="btn btn-success product-radius">Sepete Ekle</button>
-                                    </div>
-                                </div>
+                            <div class="product-detail">
+                                <b class="product-name">@product.ProductName</b>
+                                <p class="product-description">@product.Description</p>
+                                <h5 class="pull-left product-price">@product.Price TL</h5>
+                                <button class="btn btn-success pull-right product-button" name="submit" type="submit" value="AddBasket" onclick="$('#AddedProductId').val('@product.ProductId')">Sepete Ekle</button>
                             </div>
                         </div>
                     </div>
-                </div>
+                }
             }
         </div>
     </div>
